--- a/visual_alpha/BCI_Hello_World_Alpha_Wave.ipynb
+++ b/visual_alpha/BCI_Hello_World_Alpha_Wave.ipynb
@@ -33,7 +33,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 2,
             "id": "c22553dc",
             "metadata": {},
             "outputs": [],
@@ -62,7 +62,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 3,
             "id": "cb2cca36",
             "metadata": {},
             "outputs": [
@@ -121,7 +121,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 4,
             "id": "497b7ae6",
             "metadata": {},
             "outputs": [
@@ -171,7 +171,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 5,
             "id": "fbeec397",
             "metadata": {},
             "outputs": [
@@ -224,8 +224,11 @@
                 "# The 'Hello World' Plot (PSD Comparison)\n",
                 "\n",
                 "This block is the core validation of the Alpha Wave 'Hello World' phenomenon. We perform the following steps:\n",
-                "1. Using the \"event\" timestmps we looked at earlier, we are going to clip the data into snippets of the segments where the eyes are closed, and segments where the eyes are  open. These segments are often called \"Epochs\" in neural data analysis. This step is called \"Epoching\"/\n",
-                "2. Compute the Power Spectral Density (PSD) for each condition using Welch's method (spectral analysis).\n",
+                "1. Using the \"event\" timestmps we looked at earlier, we are going to clip the data into snippets of the segments where the eyes are closed (EC), and segments where the eyes are open (EO). \n",
+                "    * Jargon Alert: These segments are often called \"Epochs\" in neural data analysis. This step is called \"Epoching\"\n",
+                "2. Compute the Power Spectral Density (PSD) for each condition \n",
+                "    * Essentially the strength of each frequency \n",
+                "    * tech details: using Welch's method (spectral analysis).\n",
                 "3. Plot the average PSD for EO and EC across all channels. \n",
                 "\n",
                 "We expect to see a clear peak in the 7–13 Hz (Alpha) band in the **Eyes Closed** condition that is significantly **higher** than the Eyes Open condition, proving the wave is 'loud' when eyes are closed."
@@ -233,7 +236,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 6,
             "id": "cdcf8d4d",
             "metadata": {},
             "outputs": [
@@ -315,9 +318,18 @@
             "source": [
                 "### Localizing the Alpha Wave\n",
                 "\n",
-                "This block identifies the **Individual Alpha Peak Frequency (IAF)** by finding where the difference between Eyes Closed (EC) and Eyes Open (EO) power is greatest. We then plot the topographic map (topomap) of the difference in power (EC minus EO) for that specific Alpha band.\n",
+                "Kind of like how we all have faces, but they look different, everyone's brains are a bit different too (within a generally shared structure). \n",
                 "\n",
-                "We expect the topomap to show a high concentration of power increase over the back of the head, confirming the Alpha wave's origin in the **visual cortex of the occipital lobe**, as discussed in the tutorial.\n",
+                "* For alpha waves, they can vary in strength, location (to a degree) and also frequency.\n",
+                "\n",
+                "* Think of it like some people's alpha waves a slightly higher pitch than others.\n",
+                "\n",
+                "This block identifies the **Individual Alpha Peak Frequency (IAF)** by finding where the difference between Eyes Closed (EC) and Eyes Open (EO) power is greatest. \n",
+                "\n",
+                "We then plot the topographic map (topomap) of the difference in power (EC minus EO) for that specific Alpha band.\n",
+                "\n",
+                "* We expect the topomap to show a high concentration of power increase over the back of the head, confirming the Alpha wave's origin in the **visual cortex of the occipital lobe**, as discussed in the tutorial.\n",
+                "* If we \"tune in\" to someones individual frequency, we get a better signal compared to using the general range!\n",
                 "\n",
                 "For reference, we'll see this visual alpha signal in the \"O\" sensors in the 10-20 layout. This \"O\" stands for occipital lobe which is in the back of your head. This brain area is related to visual processing.\n",
                 "\n",
@@ -330,7 +342,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 7,
             "id": "754eba6b",
             "metadata": {},
             "outputs": [
@@ -340,7 +352,7 @@
                             "Text(0.5, 1.1, 'Subject 2')"
                         ]
                     },
-                    "execution_count": 16,
+                    "execution_count": 7,
                     "metadata": {},
                     "output_type": "execute_result"
                 },
@@ -431,7 +443,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 8,
             "id": "e0f68d0e",
             "metadata": {},
             "outputs": [
