--- a/visual_alpha/BCI_Hello_World_Alpha_Wave.ipynb
+++ b/visual_alpha/BCI_Hello_World_Alpha_Wave.ipynb
@@ -321,8 +321,7 @@
                 "Kind of like how we all have faces, but they look different, everyone's brains are a bit different too (within a generally shared structure). \n",
                 "\n",
                 "* For alpha waves, they can vary in strength, location (to a degree) and also frequency.\n",
-                "\n",
-                "* Think of it like some people's alpha waves a slightly higher pitch than others.\n",
+                "* Think of it like some people's alpha waves a slightly different pitch than others.\n",
                 "\n",
                 "This block identifies the **Individual Alpha Peak Frequency (IAF)** by finding where the difference between Eyes Closed (EC) and Eyes Open (EO) power is greatest. \n",
                 "\n",
