--- a/visual_alpha/BCI_Hello_World_Alpha_Wave.ipynb
+++ b/visual_alpha/BCI_Hello_World_Alpha_Wave.ipynb
@@ -435,14 +435,18 @@
                 "### How the strength of the alpha signal changes when visual system goes on standby\n",
                 "### The Time-Domain Alpha \"Envelope\"\n",
                 "\n",
-                "To see how the strength (or amplitude) Alpha wave changes when the visual system goes on standby, we calculate the envelope of the Alpha band (7-13 Hz) on the occipital channels (O1, O2, Oz). \n",
+                "To see how strong the alpha rhythm (7–13 Hz) is over time, take a look at its \"envelope\" on sensors in the back of the head (our \"O\" sensors).\n",
+                "* Jargon alert: The \"envelope\" is the smooth curve that follows the tops of the waves \n",
+                "* like drawing a line over the crest of each ripple in water. It shows the overall outline ize of the signal without the fast back-and-forth.\n",
                 "\n",
-                "We use the robust MNE method `raw.apply_hilbert(envelope=True)` after band-pass filtering, and then apply a final low-pass filter to smooth the envelope for a clean line plot. The resulting line plot should show high amplitude during the EC periods and low amplitude during the EO periods."
+                "To do this, we isolate the alpha frequencies by using a filter, and then use a technique to estimate the envelope, then smooth the envelope to make it a bit nicer to look at.\n",
+                "\n",
+                "We should generally see, for most people, that the signal gets stronger during eyes-closed and drops during eyes-open."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 9,
             "id": "e0f68d0e",
             "metadata": {},
             "outputs": [
