--- a/visual_alpha/BCI_Hello_World_Alpha_Wave.ipynb
+++ b/visual_alpha/BCI_Hello_World_Alpha_Wave.ipynb
@@ -24,7 +24,7 @@
                 "- Location: different parts of our brains do different things- here we'll get to see the part that processes vision!\n",
                 "\n",
                 "We'll: \n",
-                "1) load data from the MOABB project \n",
+                "1) load data from some great tools intended streamline EEG machine learning and analysis (the MOABB project) \n",
                 "2) prep it (sensor location, denoise)\n",
                 "3) visualize the alpha signal. Let's get started!\n",
                 "\n",
